nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sito-web-nginx
  labels:
    app: frontend

spec:
  replicas: 2
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: motore-nginx
        image: nginx:latest
        ports: 
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: servizio-nginx

spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30085

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx

spec:
  rules: #regole da seguire. Elenco
  - host: miosito.local #se qualcuno bussa alla porta del server chiedendo di vedere il sito miosito.local, allora prosegui, altrimenti ignorali
    http: #il traffico che sta arrvando è traffico web standard
      paths: #mappa dei percorsi delle cartelle del sito
      - path: / #è la pagina principale dove l'utente viene reindirizzato 
        pathType: Prefix #oppure qualsiasi altra pagina che inizia con / come /chi siamo, /contatti ecc...
        backend: #se le regole precedenti sono soddisfatte, devi consegnare il pacchetto al backend
          service: #consegnerà il pacchetto al service chiamato servizio-nginx che abbiamo configurato prima
            name: servizio-nginx 
            port:
              number: 80 #la porta del service
