python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment

spec:
  replicas: 3
  selector:
    matchLabels: 
      app: python-fastapi
  template:
    metadata:
      labels:
        app: python-fastapi
    spec:
      containers:
      - name: container-python
        image: alessioerco12/k8s-python-app:38a2504
        imagePullPolicy: Always
        ports: 
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: servizio-python

spec:
  type: NodePort
  selector:
    app: python-fastapi
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30085

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-python

spec:
  rules: #regole da seguire. Elenco
  - host: miosito.local #se qualcuno bussa alla porta del server chiedendo di vedere il sito miosito.local, allora prosegui, altrimenti ignorali
    http: #il traffico che sta arrvando è traffico web standard
      paths: #mappa dei percorsi delle cartelle del sito
      - path: / #è la pagina principale dove l'utente viene reindirizzato 
        pathType: Prefix #oppure qualsiasi altra pagina che inizia con / come /chi siamo, /contatti ecc...
        backend: #se le regole precedenti sono soddisfatte, devi consegnare il pacchetto al backend
          service: #consegnerà il pacchetto al service chiamato servizio-nginx che abbiamo configurato prima
            name: servizio-python 
            port:
              number: 80 #la porta del service
